# arc_omero

./: .gitmodules  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/arc_omero/: __init__.py  arc_preparer.py
test/data/arcs/Resolve/: README.md  isa.investigation.xlsx
test/data/arcs/Resolve/assays/ResolveMolecularCartography/: isa.assay.xlsx
test/data/arcs/Resolve/assays/ResolveMolecularCartography/protocols/: protocol.txt
test/data/arcs/Resolve/runs/ProcessedData/: run.config  run.cwl  run.yml
test/data/arcs/Resolve/studies/MBEN_MolecularCartography/: isa.study.xlsx
test/data/arcs/Resolve/workflows/ResolvePreprocessing/: README.md  workflow.cwl
test/data/arcs/Resolve/workflows/ResolvePreprocessing/resolve_processing/: example.config  main.nf  nextflow.config
test/data/arcs/Resolve/workflows/ResolvePreprocessing/resolve_processing/container_recipes/: README.md  container.def  gpu_recipe.def
test/data/arcs/map-by-seq_clsm-stacks/: README.md  arc.json  isa.investigation.xlsx
test/data/arcs/map-by-seq_clsm-stacks/assays/CLSM-stacks_DMSO/: isa.assay.xlsx
test/data/arcs/map-by-seq_clsm-stacks/assays/CLSM-stacks_DMSO/dataset/YFP-ARK1-DMSO-treated/MetaData/: YFP-ARK1-DMSO-treated_MAX_cell5_barSnapshot1.xml  YFP-ARK1-DMSO-treated_MAX_cell5_barSnapshot1_Properties.xml  (+2 more)
test/data/arcs/map-by-seq_clsm-stacks/assays/CLSM-stacks_latrunculinB/: isa.assay.xlsx
test/data/arcs/map-by-seq_clsm-stacks/assays/CLSM-stacks_oryzalin/: isa.assay.xlsx
test/data/arcs/map-by-seq_clsm-stacks/assays/YFP-ARK1_running-person-icon/: isa.assay.xlsx
test/data/arcs/map-by-seq_clsm-stacks/studies/ARK1-cytoskeletal-localisation/: README.md  isa.study.xlsx
(+34 files in other folders)
